# Little-Projects

./: .gitattributes  README.md
MySQLCPP/: CMakeLists.txt  main.cpp
QTClion/: CMakeLists.txt
antiafk/: AntiAFKApp.java  run.bat
autoclicker/: ClickForever.java  readme.txt
autoclicker_unix/: main.cpp
autoclickers/autoclicker/: ClickForever.java  run.bat
autoclickers/autoclicker_unix/: CMakeLists.txt
autoclickers/autoclicker_win/: autoclicker.cpp
fast_search_eddy/: main.py
login/: database.sql  readme.txt
login/artifact/: .project  pom.xml
login/artifact/src/main/java/artifact/: App.java  Information.java  Register.java
